--- a/www/templates/tab-current.html
+++ b/www/templates/tab-current.html
@@ -3,6 +3,7 @@
     <h1>Currently</h1>
     <p>{{weatherData.currently.summary}}</p>
     <p>{{weatherData.currently.temperature}}</p>
+      <img src="../png/rainy12.png">
     <p>{{weatherData.currently.humidity}}</p>
     <p>{{weatherData.currently.windSpeed}}</p>
     <p>{{weatherData.currently.visibility}}</p>
